--- a/index.html
+++ b/index.html
@@ -170,13 +170,15 @@
                 <li>- Movie Recommendation System</li>
                 <li>- Develop an AI image classification model to recognize various Thai foods</li>
                 <li>- Develop an AI model to predict stock price</li>
-                <li>- Mini-Project: I am currently working on a mini-project about Thai license plate recognition using MATLAB</li>
+                <li>- Mini-Project: Thai license plate recognition using MATLAB</li>
                 <br>
                 <center>
                         <button><a href="https://www.kaggle.com/code/rwachirawit/thai-food-classification">View : Thai Foods Classify</a></button>
-                        <button><a href="https://web.rmutp.ac.th/eng/wachirawit-r/arm/show_all_data.php">View Mini-Project : Database</a></button>
+                        <button><a href="https://github.com/armz5657/thai_license_plate_recognition.git">View : Thai License Plate Recognition on MATLAB</a></button>
                         <br>
+                        <button><a href="https://web.rmutp.ac.th/eng/wachirawit-r/arm/show_all_data.php">View Mini-Project : Database</a></button>
                         <button><a href="https://movies-recommend-by-wachirawit.streamlit.app/">View : Movie Recommend</a></button>
+                        <br>
                         <button><a href="https://colab.research.google.com/drive/1R7kJuPP3nlmXMbPnsRmmdEeW4tfF1wsz?usp=sharing">View : Predict Stock</a></button>
               </center>
             </ul>
@@ -233,6 +235,21 @@
         <img src="pics/certificate/YOUNG GENergy 2022 issed by PTT.JPG" alt="PTT Young Generation" class="certificate-img">
       </a>
     </div>
+    <div class="certificate-item">
+      <a href="javascript:void(0)" onclick="openModal('pics/certificate/AI for All From Basics to GenAI Practice.jpg')">
+        <img src="pics/certificate/AI for All From Basics to GenAI Practice.jpg" alt="AI for All: From Basics to GenAI Practice" class="certificate-img">
+      </a>
+    </div>
+    <div class="certificate-item">
+    <a href="https://matlabacademy.mathworks.com/progress/share/certificate.html?id=2861bc5e-76fc-4109-8c78-315217a9b8de&" target="_blank">
+  <img src="pics/certificate/sim_onramp.jpg" alt="Simulink Onramp" class="certificate-img">
+</a></div>
+  <div class="certificate-item">
+    <a href="https://matlabacademy.mathworks.com/progress/share/certificate.html?id=3e6f1ce0-7a61-4add-8b8c-766b0a5eef90&" target="_blank">
+  <img src="pics/certificate/ml_onramp.jpg" alt="Simulink Onramp" class="certificate-img">
+</a>
+
+    </div>
     <!-- Credly Badges -->
     <div class="credly-badge">
       <div data-iframe-width="270" data-iframe-height="270" data-share-badge-id="5bab8596-1886-4d82-a4c5-46e1d2102c1d" data-share-badge-host="https://www.credly.com"></div>
@@ -246,7 +263,6 @@
       <div data-iframe-width="250" data-iframe-height="270" data-share-badge-id="47dde44f-10f4-4cea-bdc3-a7f16c9f6155" data-share-badge-host="https://www.credly.com"></div>
       <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
     </div>
-  </div>
   </div>
 
   <!-- Modal for image popup -->
